feat: add containerization

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,12 +10,53 @@ services:
       - "${DB_PORT:-5433}:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
+    networks:
+      - auth-service-network
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U ${DB_USER:-user}"]
       interval: 15s
       timeout: 5s
       retries: 5
 
+  app:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: auth_service-app
+    ports:
+      - "${SERVER_PORT:-8082}:8080"
+    environment:
+      SPRING_PROFILES_ACTIVE: docker
+      DB_HOST: postgres
+      DB_PORT: 5432
+      DB_NAME: ${DB_NAME:-authdb}
+      DB_USER: ${DB_USER:-user}
+      DB_PASSWORD: ${DB_PASSWORD:-password}
+
+      USER_SERVICE_URL: ${USER_SERVICE_URL}
+
+      SERVICE_API_KEY: ${SERVICE_API_KEY:-service-key}
+
+      JWT_SECRET: ${JWT_SECRET:-jwt-secret}
+
+      SERVER_PORT: 8080
+    depends_on:
+      postgres:
+        condition: service_healthy
+    networks:
+      - microservices-network
+    restart: unless-stopped
+    healthcheck:
+      test: [ "CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost:8080/actuator/health || exit 1" ]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+
+networks:
+  microservices-network:
+    external: true
+  auth-service-network:
+    driver: bridge
 volumes:
   postgres_data:
     driver: local
