--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,10 @@ DB_NAME=authdb
 DB_USER=user
 DB_PASSWORD=change_me
 
+SERVICE_API_KEY=service-key
+
+JWT_SECRET=jwt-secret
+
 SERVER_PORT=8080
 
 SPRING_PROFILES_ACTIVE=local
