--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
     networks:
       - auth-service-network
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${DB_USER:-user}"]
+      test: ["CMD-SHELL", "pg_isready -U ${DB_USER:-user} -d ${DB_NAME:-authdb}"]
       interval: 15s
       timeout: 5s
       retries: 5
@@ -22,7 +22,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    container_name: auth_service-app
+    container_name: auth-service
     ports:
       - "${SERVER_PORT:-8082}:8080"
     environment:
@@ -45,9 +45,10 @@ services:
         condition: service_healthy
     networks:
       - microservices-network
+      - auth-service-network
     restart: unless-stopped
     healthcheck:
-      test: [ "CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost:8080/actuator/health || exit 1" ]
+      test: [ "CMD-SHELL", "wget", "--quiet", "--tries=1", "--spider", "http://localhost:8080/actuator/health || exit 1" ]
       interval: 30s
       timeout: 10s
       retries: 5
