feat: add SecurityConfig

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,8 @@ DB_NAME=authdb
 DB_USER=user
 DB_PASSWORD=change_me
 
+USER_SERVICE_URL=http://user-service:8080
+
 SERVICE_API_KEY=service-key
 
 JWT_SECRET=jwt-secret
